# rusbmux-ci-test

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  THIRD_PARTY_LICENSES.txt  TODO.md  about.hbs  about.toml  cliff.toml
.github/: cliff.toml
.github/.github/: cliff.toml
.github/workflows/: release.yml
launchctl/: com.abdullah-albanna.rusbmux.plist
launchctl/scripts/: postinstall.sh  postuninstall.sh
packaging/: APKBUILD  PKGBUILD  package.sh  rusbmux.spec
packaging/DEBIAN/: control  postinst  prerm
src/: daemon.rs  lib.rs  main.rs  utils.rs
src/conn/: mod.rs  usb.rs
src/device/: mod.rs  network.rs  packet_router.rs  usb.rs
src/error/: mod.rs
src/handler/: connect.rs  delete_pair_record.rs  device_list.rs  listen.rs  listeners_list.rs  mod.rs  read_buid.rs  read_pair_record.rs  save_pair_record.rs
src/parser/: usbmux.rs
src/parser/device_mux/: mod.rs
src/usb_backend/: mod.rs  nusb.rs  rusb.rs
src/watcher/: mod.rs  network.rs  usb.rs
systemd/: rusbmux.service
windows/: rusbmux-setup.iss
windows/rusbmux-usb-win-driver/: Cargo.toml  rusbmux_libusb0.inf
windows/rusbmux-usb-win-driver/src/: main.rs  uninstall.rs
