[package]
name = "rusbmux"
version = "0.1.5"
edition = "2024"
authors = ["Abdullah Al-Banna"]
description = "A usbmuxd replacement in pure Rust"
documentation = "https://docs.rs/rusbmux"
repository = "https://github.com/abdullah-albanna/rusbmux"
homepage = "https://github.com/abdullah-albanna/rusbmux"
license = "MIT OR Apache-2.0"
categories = ["network-programming"]
keywords = ["apple", "usb", "usbmuxd", "multiplexing", "ios"]

[dependencies]
plist-macro = "0.1"
plist = "1.8"

bytemuck = "1"
dashmap = "6.1"
bytes = "1"

# https://github.com/kevinmehall/nusb/pull/181
nusb = { version = "^0.2.2", features = ["tokio"], optional = true }
rusb = { version = "0.9", optional = true }

tokio = { version = "1", features = ["io-util", "fs", "sync", "macros"] }
tokio-util = "0.7"
futures-lite = { version = "2", default-features = false }

crossfire = { version = "3", features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
], optional = true }

thiserror = "2"

mdns-sd = "0.19"

idevice = { version = "0.1.57", features = ["heartbeat", "tcp"] }
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1.23.1", features = ["v4"] }
async-stream = "0.3.6"

pack1 = "1.0.0"
bitflags = "2"
etherparse = "0.19"

[target.'cfg(target_family = "unix")'.dependencies]
rustix = { version = "1.1.4", features = ["net"], optional = true }
libc = "0.2"


[target.'cfg(target_family = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Networking",
  "Win32_Networking_WinSock",
] }

[features]
default = ["bin", "nusb"]
bin = [
  "dep:rustix",
  "tokio/net",
  "tokio/signal",
  "tokio/rt-multi-thread",
  "dep:tracing-subscriber",
]
nusb = ["dep:nusb"]
rusb = ["dep:rusb"]
rusb-vendored = ["dep:rusb", "rusb/vendored"]

[[bin]]
name = "rusbmux"
required-features = ["bin"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
