[package]
name = "rusbmux"
version = "0.1.8"
edition = "2024"
authors = ["Abdullah Al-Banna"]
description = "A usbmuxd replacement in pure Rust"
documentation = "https://docs.rs/rusbmux"
repository = "https://github.com/abdullah-albanna/rusbmux"
homepage = "https://github.com/abdullah-albanna/rusbmux"
license = "MIT OR Apache-2.0"
categories = ["network-programming"]
keywords = ["apple", "usb", "usbmuxd", "multiplexing", "ios"]

[dependencies]
plist-macro = "0.1"
plist = "1.8"

bytemuck = "1"
dashmap = "6.1"
bytes = "1"

# https://github.com/kevinmehall/nusb/pull/181
nusb = { version = "^0.2.2", features = ["tokio"], optional = true }
rusb = { version = "0.9", optional = true }

tokio = { version = "1", features = ["io-util", "fs", "sync", "macros"] }
tokio-util = "0.7"
futures-lite = { version = "2", default-features = false }

crossfire = { version = "3", features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
], optional = true }

thiserror = "2"

mdns-sd = "0.19"

idevice = { version = "0.1.57", features = ["heartbeat", "tcp"] }
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1.23.1", features = ["v4"] }
async-stream = "0.3.6"

pack1 = "1.0.0"
bitflags = "2"
etherparse = "0.19"
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_family = "unix")'.dependencies]
rustix = { version = "1.1.4", features = ["net"], optional = true }
libc = "0.2"


[target.'cfg(target_family = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Networking",
  "Win32_Networking_WinSock",
] }

[features]
default = ["bin", "nusb"]
bin = [
  "dep:rustix",
  "tokio/net",
  "tokio/signal",
  "tokio/rt-multi-thread",
  "dep:tracing-subscriber",
]
nusb = ["dep:nusb"]
rusb = ["dep:rusb"]
rusb-vendored = ["dep:rusb", "rusb/vendored"]

[[bin]]
name = "rusbmux"
required-features = ["bin"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

# Linux package specific
[package.metadata.deb]
recommends = "systemd"
suggests = ["libimobiledevice-utils"]
enhances = "usbmuxd"
conflicts = "usbmuxd"
replaces = "usbmuxd"
provides = ["usbmuxd", "rusbmux"]
revision = ""

extended-description = """
 rusbmux is a drop-in replacement for usbmuxd, written in pure Rust.
 It provides USB multiplexing for Apple devices, supporting both
 USB and WiFi connections. It works with libimobiledevice, idevice, 3uTools, iTunes, and other tools that use usbmuxd."""

section = "net"
priority = "optional"

assets = [
  [
    "target/release/rusbmux",
    "usr/bin/rusbmux",
    "755",
  ],
  [
    "README.md",
    "usr/share/doc/rusbmux/README.md",
    "644",
  ],
  [
    "LICENSE-MIT",
    "usr/share/licenses/rusbmux/LICENSE-MIT",
    "644",
  ],
  [
    "LICENSE-APACHE",
    "usr/share/licenses/rusbmux/LICENSE-APACHE",
    "644",
  ],
  [
    "THIRD_PARTY_LICENSES",
    "usr/share/licenses/rusbmux/THIRD_PARTY_LICENSES",
    "644",
  ],
]
systemd-units = { enable = true, start = true }

depends = ["libc6", "libgcc-s1"]

[package.metadata.deb.variants.musl]
# so it won't append the -musl to the name
name = "rusbmux"
depends = []

[package.metadata.generate-rpm]
vendor = "Abdullah Al-Banna <abdu.albanna@proton.me>"

assets = [
  { source = "target/release/rusbmux", dest = "/usr/bin/rusbmux", mode = "755" },
  { source = "systemd/rusbmux.service", dest = "/usr/lib/systemd/system/rusbmux.service", mode = "644" },
  { source = "README.md", dest = "/usr/share/doc/rusbmux/README.md", mode = "644", doc = true },
  { source = "LICENSE-MIT", dest = "/usr/share/licenses/rusbmux/LICENSE-MIT", mode = "644" },
  { source = "LICENSE-APACHE", dest = "/usr/share/licenses/rusbmux/LICENSE-APACHE", mode = "644" },
  { source = "THIRD_PARTY_LICENSES", dest = "/usr/share/licenses/rusbmux/THIRD_PARTY_LICENSES", mode = "644" },
]
provides.rusbmux = "*"
provides.usbmuxd = "*"
conflicts.usbmuxd = "*"

suggests = { systemd = "*", libimobiledevice-utils = "*" }

enhances.usbmuxd = "*"
obsoletes.usbmuxd = "*"

summary = """
 rusbmux is a drop-in replacement for usbmuxd, written in pure Rust.
 It provides USB multiplexing for Apple devices, supporting both
 USB and WiFi connections. It works with libimobiledevice, idevice, 3uTools, iTunes, and other tools that use usbmuxd."""

post_install_script = """\
if systemctl --version >/dev/null 2>&1; then
    systemctl daemon-reload || true
    systemctl enable rusbmux || true
    systemctl restart rusbmux || true
fi
"""
pre_uninstall_script = """\
if [ "$1" = 0 ]; then
    if systemctl --version >/dev/null 2>&1; then
        systemctl disable --now rusbmux || true
    fi
fi
"""
post_uninstall_script = """\
if [ "$1" = 0 ]; then
    if systemctl --version >/dev/null 2>&1; then
      rm -f /usr/lib/systemd/system/rusbmux.service
      systemctl daemon-reload || true
    fi
fi
"""

auto-req = "no"
requires = { glibc = "*", libgcc = "*" }

[package.metadata.generate-rpm.variants.musl]
requires = {}
